--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   photo_view: ^0.3.3
   image_gallery_saver: ^1.1.0
   permission_handler: ^3.0.1
+  video_player: 0.10.1+5
 
 dev_dependencies:
   flutter_test:
